Rework OreGen recipe category